Setting Material Badges to Small Size

--- a/src/wallet/src/app/identity/identity.component.html
+++ b/src/wallet/src/app/identity/identity.component.html
@@ -3,11 +3,11 @@
     <p>Sandra van Veen</p>
     <div id="bar" >
             <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/credentials">check_circle_outline</mat-icon>
-            <mat-icon matBadge="22" [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/identity">person_outline</mat-icon>
-            <mat-icon matBadge="22" [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/contacts">people_outline</mat-icon>
+            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/identity">person_outline</mat-icon>
+            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/contacts">people_outline</mat-icon>
             <mat-icon matBadge="5"  matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/notifications">
             notifications</mat-icon>
-            <mat-icon matBadge="22" [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/settings">
+            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/settings">
             settings</mat-icon>
           </div>
     <div>
