adding verifiable claims list

--- a/src/wallet/src/app/app.component.html
+++ b/src/wallet/src/app/app.component.html
@@ -6,12 +6,12 @@
     <router-outlet></router-outlet>
   </div>
   <div id="bottom-bar" >
-    <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="credentials">check_circle_outline</mat-icon>
-    <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="identity">person_outline</mat-icon>
-    <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="contacts">people_outline</mat-icon>
-    <mat-icon matBadge="5"  matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="alerts">
+    <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="credentials">check_circle_outline</mat-icon>
+    <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="identity">person_outline</mat-icon>
+    <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="contacts">people_outline</mat-icon>
+    <mat-icon matBadge="5"  matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="alerts">
     notifications</mat-icon>
-    <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="settings">
+    <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="settings">
     settings</mat-icon>
   </div>
 </div>
