--- a/src/wallet/src/app/credentials/credentials.component.html
+++ b/src/wallet/src/app/credentials/credentials.component.html
@@ -1,1 +1,10 @@
-<p>credentials works!</p>
+<mat-list>
+	<mat-list-item *ngFor="let message of messages">
+		<img matListAvatar src="{{message.image}}" alt="">
+		<h3 matLine> {{message.credential.type[1]}} </h3>
+		<p matLine>
+			<span> {{message.credential.type[0]}} </span>
+			<span> issuer: {{message.credential.issuer}} </span>
+		</p>
+	</mat-list-item>
+</mat-list>
