--- a/src/wallet/src/app/identity/identity.component.html
+++ b/src/wallet/src/app/identity/identity.component.html
@@ -2,12 +2,12 @@
         <img src="https://thispersondoesnotexist.com/image"  class="photograph" />
     <p>Sandra van Veen</p>
     <div id="bar" >
-            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/credentials">check_circle_outline</mat-icon>
-            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/identity">person_outline</mat-icon>
-            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/contacts">people_outline</mat-icon>
-            <mat-icon matBadge="5"  matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/notifications">
+            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/credentials">check_circle_outline</mat-icon>
+            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/identity">person_outline</mat-icon>
+            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/contacts">people_outline</mat-icon>
+            <mat-icon matBadge="5"  matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/notifications">
             notifications</mat-icon>
-            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/settings">
+            <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="/settings">
             settings</mat-icon>
           </div>
     <div>
