fit / put assistant in page

--- a/src/wallet/src/app/app.component.html
+++ b/src/wallet/src/app/app.component.html
@@ -11,7 +11,9 @@
     <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="contacts">people_outline</mat-icon>
     <mat-icon matBadge="5"  matBadgeSize='small' [matBadgeHidden]="!visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="alerts">
     notifications</mat-icon>
-    <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="settings">
+    <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="assistant">
+      record_voice_over</mat-icon>
+      <mat-icon matBadge="22" matBadgeSize='small' [matBadgeHidden]="visible" matBadgeColor="warn" matBadgePosition="above after" routerLink="settings">
     settings</mat-icon>
   </div>
 </div>
