--- a/src/wallet/src/app/contacts/contacts.component.html
+++ b/src/wallet/src/app/contacts/contacts.component.html
@@ -1,4 +1,5 @@
 <mat-list>
+    <div id="chat"></div>
 	<mat-list-item *ngFor="let message of messages">
 		<img matListAvatar src="{{message.image}}" alt="photo of contact">
 		<h3 matLine> {{message.from}} </h3>
